------------
v3.0.0alpha7
------------




------------
v3.0.0alpha6
------------

[rla] Controller Framework Routes now work correctly for separate subdomain or
      for uncommon webdir layouts.
[rla] Controller Framework now has limited capabilities for unauthenticated or
      API-authenticated calls.
[rla] Adapt schema migrations to work in new H6 installation layout.
[rla] Added injectable wrapper around Config to reduce globals access.
[rla] With Marco Abbrancati: Upgraded test cases for phpunit 9.x utility.


--------
v2.31.15
--------

[mjr] Fix regression in sending mail via ActiveSync.
[mjr] Fix ActiveSync SmartForward handling.


--------
v2.31.14
--------

[jan] Avoid concurrent access to DNS cache from multiple hosts
      (cheese@nosuchhost.net, PR#9).
[jan] Support Redis Sentinel configuration (Michael Menge
      <michael.menge@zdv.uni-tuebingen.de>, Request #14998).
[jan] Use file hashing for detecting outdated configuration files.
[mjr] Fix regression in Autodiscover v1 (Bug #14992).


--------
v2.31.13
--------

[mjr] Improve PHP 7.3 compatibility.


--------
v2.31.12
--------

[mjr] Support for EAS Autodiscover v2.


--------
v2.31.11
--------

[mjr] Fix UTF-8 encoding of ActiveSync SmartReply requests (Bug #14957)


--------
v2.31.10
--------

[mjr] Fix minimum required ActiveSync version.


-------
v2.31.9
-------

[mjr] Improvements for handling TNEF attachments over ActiveSync.


-------
v2.31.8
-------

[mjr] Improve ActiveSync RESOLVERECIPIENT reqeuests.


-------
v2.31.7
-------

[mjr] Fix returning image binary data with EAS ResolveRecipient requests.
[mjr] Fix returning images with EAS search results.
[mjr] Fix handling of EAS ResolveRecipient requests without AVAILABILITY query.


-------
v2.31.6
-------

[mjr] SECURITY: Fix XSS vulnerability when rendering a colorpicker (Bug
      #14857).


-------
v2.31.5
-------

[mjr] Work around buggy EAS clients that send badly formed HTML in SMARTREPLY
      (Bug #14841).


-------
v2.31.4