@@ -26,62 +26,62 @@
             "role": "developer"
         }
     ],
-    "time": "2021-11-10",
+    "time": "2021-11-28",
     "repositories": [
         {
             "type": "composer",
-            "url": "https://horde-satis.maintaina.com"
+            "url": "https://horde-satis.maintaina.com/"
         }
     ],
     "require": {
-        "horde/horde-installer-plugin": "dev-FRAMEWORK_6_0 || *",
+        "horde/horde-installer-plugin": "*",
         "php": "^7.4 || ^8",
-        "horde/alarm": "^3 || dev-FRAMEWORK_6_0",
-        "horde/auth": "^3 || dev-FRAMEWORK_6_0",
-        "horde/autoloader": "^3 || dev-FRAMEWORK_6_0",
-        "horde/browser": "^3 || dev-FRAMEWORK_6_0",
-        "horde/cache": "^3 || dev-FRAMEWORK_6_0",
-        "horde/cli": "^3 || dev-FRAMEWORK_6_0",
-        "horde/compress": "^3 || dev-FRAMEWORK_6_0",
-        "horde/compress_fast": "^2 || dev-FRAMEWORK_6_0",
-        "horde/controller": "^3 || dev-FRAMEWORK_6_0",
-        "horde/cssminify": "^2 || dev-FRAMEWORK_6_0",
-        "horde/data": "^3 || dev-FRAMEWORK_6_0",
-        "horde/date": "^3 || dev-FRAMEWORK_6_0",
-        "horde/exception": "^3 || dev-FRAMEWORK_6_0",
-        "horde/group": "^3 || dev-FRAMEWORK_6_0",
-        "horde/hashtable": "^2 || dev-FRAMEWORK_6_0",
-        "horde/history": "^3 || dev-FRAMEWORK_6_0",
-        "horde/http": "^3 || dev-FRAMEWORK_6_0",
-        "horde/http_server": "^1 || dev-FRAMEWORK_6_0",
-        "horde/injector": "^3 || dev-FRAMEWORK_6_0",
-        "horde/javascriptminify": "^2 || dev-FRAMEWORK_6_0",
-        "horde/lock": "^3 || dev-FRAMEWORK_6_0",
-        "horde/log": "^3 || dev-FRAMEWORK_6_0",
-        "horde/logintasks": "^3 || dev-FRAMEWORK_6_0",
-        "horde/mime": "^3 || dev-FRAMEWORK_6_0",
-        "horde/mime_viewer": "^3 || dev-FRAMEWORK_6_0",
-        "horde/notification": "^3 || dev-FRAMEWORK_6_0",
-        "horde/pack": "^2 || dev-FRAMEWORK_6_0",
-        "horde/perms": "^3 || dev-FRAMEWORK_6_0",
-        "horde/prefs": "^3 || dev-FRAMEWORK_6_0",
-        "horde/secret": "^3 || dev-FRAMEWORK_6_0",
-        "horde/serialize": "^3 || dev-FRAMEWORK_6_0",
-        "horde/sessionhandler": "^3 || dev-FRAMEWORK_6_0",
-        "horde/share": "^3 || dev-FRAMEWORK_6_0",
-        "horde/support": "^3 || dev-FRAMEWORK_6_0",
-        "horde/template": "^3 || dev-FRAMEWORK_6_0",
-        "horde/token": "^3 || dev-FRAMEWORK_6_0",
-        "horde/text_filter": "^3 || dev-FRAMEWORK_6_0",
-        "horde/translation": "^3 || dev-FRAMEWORK_6_0",
-        "horde/url": "^3 || dev-FRAMEWORK_6_0",
-        "horde/util": "^3 || dev-FRAMEWORK_6_0",
-        "horde/view": "^3 || dev-FRAMEWORK_6_0",
+        "horde/alarm": "^3",
+        "horde/auth": "^3",
+        "horde/autoloader": "^3",
+        "horde/browser": "^3",
+        "horde/cache": "^3",
+        "horde/cli": "^3",
+        "horde/compress": "^3",
+        "horde/compress_fast": "^2",
+        "horde/controller": "^3",
+        "horde/cssminify": "^2",
+        "horde/data": "^3",
+        "horde/date": "^3",
+        "horde/exception": "^3",
+        "horde/group": "^3",
+        "horde/hashtable": "^2",
+        "horde/history": "^3",
+        "horde/http": "^3",
+        "horde/http_server": "^1",
+        "horde/injector": "^3",
+        "horde/javascriptminify": "^2",
+        "horde/lock": "^3",
+        "horde/log": "^3",
+        "horde/logintasks": "^3",
+        "horde/mime": "^3",
+        "horde/mime_viewer": "^3",
+        "horde/notification": "^3",
+        "horde/pack": "^2",
+        "horde/perms": "^3",
+        "horde/prefs": "^3",
+        "horde/secret": "^3",
+        "horde/serialize": "^3",
+        "horde/sessionhandler": "^3",
+        "horde/share": "^3",
+        "horde/support": "^3",
+        "horde/template": "^3",
+        "horde/token": "^3",
+        "horde/text_filter": "^3",
+        "horde/translation": "^3",
+        "horde/url": "^3",
+        "horde/util": "^3",
+        "horde/view": "^3",
         "pear/pear": "*",
         "ext-session": "*"
     },
     "require-dev": {
-        "horde/test": "^3 || dev-FRAMEWORK_6_0"
+        "horde/test": "^3"
     },
     "suggest": {
         "pear/text_captcha": "*",
