@@ -8,8 +8,9 @@
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes: |+
-    
+  notes: |
+    [rla] Added PSR-3 Logger Factory to the default set.
+    |+
 3.0.0alpha6:
   api: 3.0.0alpha6
   state:
