@@ -1062,9 +1062,9 @@
  <dependencies>
   <required>
    <php>
-    <min>7.0.0</min>
-    <max>8.0.0alpha1</max>
-    <exclude>8.0.0alpha1</exclude>
+    <min>7.4.0</min>
+    <max>9.0.0alpha1</max>
+    <exclude>9.0.0alpha1</exclude>
    </php>
    <pearinstaller>
     <min>1.7.0</min>
@@ -4820,7 +4820,7 @@
   <release>
    <version>
     <release>3.0.0alpha7</release>
-    <api>3.0.0alpha6</api>
+    <api>3.0.0alpha1</api>
    </version>
    <stability>
     <release>alpha</release>
